crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__error_empty_kind.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type T ('f : ) = A"
---
Type(
    Union(
        Param(
            Kind(
                Start(
                    1,
                    14,
                ),
                1,
                14,
            ),
            1,
            8,
        ),
        1,
        6,
    ),
    1,
    1,
)
