crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__error_empty_representation_annotation.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type T ('f : ) = A"
info: diagnostic
---
nash::syntax

  × Expected a representation bound.
   ╭─[src/Main.nash:1:14]
 1 │ type T ('f : ) = A
   ·              ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
