crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__error_labeled_field_without_type.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type D = D { owner }"
info: diagnostic
---
nash::syntax

  × Expected `:` after the constructor field name.
   ╭─[src/Main.nash:1:20]
 1 │ type D = D { owner }
   ·                    ─
   ╰────
  help: Separate the field name and type with `:`.
