crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__error_unknown_kind.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type T ('f : Foo) = A"
---
Type(
    Union(
        Param(
            Kind(
                Name(
                    "Foo",
                    1,
                    14,
                ),
                1,
                14,
            ),
            1,
            8,
        ),
        1,
        6,
    ),
    1,
    1,
)
