crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__error_unknown_representation_annotation.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type T ('f : Foo) = A"
info: diagnostic
---
nash::syntax

  × Unknown representation bound `Foo`.
   ╭─[src/Main.nash:1:14]
 1 │ type T ('f : Foo) = A
   ·              ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
