crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__union_multiple_args.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "type Result 'e 'a = Ok 'a | Err 'e"
---
Union(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 35,
            },
        },
        value: Union {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: "Result",
            },
            arguments: [
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: "e",
                    },
                    repr: None,
                },
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 18,
                            },
                        },
                        value: "a",
                    },
                    repr: None,
                },
            ],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 21,
                            },
                            end: Position {
                                line: 1,
                                column: 23,
                            },
                        },
                        value: "Ok",
                    },
                    arguments: Positional(
                        [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 24,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 26,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    ),
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 29,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "Err",
                    },
                    arguments: Positional(
                        [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 33,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 35,
                                    },
                                },
                                value: Var(
                                    "e",
                                ),
                            },
                        ],
                    ),
                },
            ],
            attributes: [],
            data_layout: None,
        },
    },
)
